Stop video when not visible

--- a/src/style/movieDetails.less
+++ b/src/style/movieDetails.less
@@ -4,7 +4,6 @@
 
     video{
         width: 100%;
-        display: none;
         background: @darkBlue;
     }
 
